--- a/vignettes/data_simulation.Rmd
+++ b/vignettes/data_simulation.Rmd
@@ -490,7 +490,7 @@ my_data_sim_setup <- create_data_simulation(
     external = cut_off_after_events(n = 100)
   )
 
-my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = 1, drift_hr = c(1, 1.2))
+my_data_list <- generate(my_data_sim_setup, n = 3, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2))
 ```
 
 Now we can define the simulation setup for the models:
@@ -515,7 +515,7 @@ treatment <- sim_treatment_list(
 )
 
 sim_obj <- create_simulation_obj(
-  data_matrix_list = my_data,
+  data_matrix_list = my_data_list,
   outcome = outcome,
   borrowing = borrowing,
   treatment = treatment,
@@ -553,7 +553,7 @@ historical_trial_data <- data.frame(
   enrollment = 1 # enrollment is specified here but not used in clinical cut off
 )
 
-my_baseline <- create_baseline_object(
+my_internal_baseline <- create_baseline_object(
   n_trt_int = 100,
   n_ctrl_int = 50,
   n_ctrl_ext = 0,
@@ -567,8 +567,8 @@ my_baseline <- create_baseline_object(
   transformations = list(score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7))
 )
 
-my_data_sim_setup <- create_data_simulation(
-  baseline = my_baseline,
+my_data_sim_setup_with_fixed <- create_data_simulation(
+  baseline = my_internal_baseline,
   coefficients = c(age = 0.001, score_high = 1.1),
   event_dist = event_dist(dist = "exponential", lambdas = 1 / 50),
   fixed_external_data = historical_trial_data
@@ -586,7 +586,7 @@ my_data_sim_setup <- create_data_simulation(
     internal = cut_off_after_first(time = 60),
     external = cut_off_after_events(n = 100)
   )
-my_data_sim_setup
+my_data_sim_setup_with_fixed
 #> DataSimObject
 #> -------------
 #> Baseline object:
@@ -638,7 +638,7 @@ my_data_sim_setup
 #>  N: 40
 
 # Drift is not be used for the fixed external data!
-generate(my_data_sim_setup, n = 1, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2))
+generate(my_data_sim_setup_with_fixed, n = 1, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2))
 #> Warning: Drift parameter is not applied to fixed external data
 #> SimDataList object with  4  different scenarios
 #>   sim_id treatment_hr drift_hr n_datasets_per_param
@@ -647,5 +647,24 @@ generate(my_data_sim_setup, n = 1, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2
 #> 3      3          1.0      1.2                    1
 #> 4      4          1.3      1.2                    1
 
-my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = c(1, 1.3), drift_hr = c(1))
+external_data_list <- generate(my_data_sim_setup_with_fixed, n = 3, treatment_hr = c(1, 1.3), drift_hr = c(1))
 ```
+
+### Combining simulations
+
+Simulation data objects can be combined so that a simulation can be run once.
+
+
+```r
+combined_data_list <- c(my_data_list, external_data_list)
+combined_data_list
+#> SimDataList object with  6  different scenarios
+#>   sim_id treatment_hr drift_hr n_datasets_per_param
+#> 1      1          1.0      1.0                    3
+#> 2      2          1.3      1.0                    3
+#> 3      3          1.0      1.2                    3
+#> 4      4          1.3      1.2                    3
+#> 5      5          1.0      1.0                    3
+#>  [ reached 'max' / getOption("max.print") -- omitted 1 rows ]
+```
+
