--- a/vignettes/original/_data_simulation.Rmd
+++ b/vignettes/original/_data_simulation.Rmd
@@ -249,7 +249,7 @@ my_data_sim_setup <- create_data_simulation(
     external = cut_off_after_events(n = 100)
   )
 
-my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = 1, drift_hr = c(1, 1.2))
+my_data_list <- generate(my_data_sim_setup, n = 3, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2))
 ```
 
 Now we can define the simulation setup for the models:
@@ -273,7 +273,7 @@ treatment <- sim_treatment_list(
 )
 
 sim_obj <- create_simulation_obj(
-  data_matrix_list = my_data,
+  data_matrix_list = my_data_list,
   outcome = outcome,
   borrowing = borrowing,
   treatment = treatment,
@@ -309,7 +309,7 @@ historical_trial_data <- data.frame(
   enrollment = 1 # enrollment is specified here but not used in clinical cut off
 )
 
-my_baseline <- create_baseline_object(
+my_internal_baseline <- create_baseline_object(
   n_trt_int = 100,
   n_ctrl_int = 50,
   n_ctrl_ext = 0,
@@ -323,8 +323,8 @@ my_baseline <- create_baseline_object(
   transformations = list(score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7))
 )
 
-my_data_sim_setup <- create_data_simulation(
-  baseline = my_baseline,
+my_data_sim_setup_with_fixed <- create_data_simulation(
+  baseline = my_internal_baseline,
   coefficients = c(age = 0.001, score_high = 1.1),
   event_dist = event_dist(dist = "exponential", lambdas = 1 / 50),
   fixed_external_data = historical_trial_data
@@ -342,10 +342,20 @@ my_data_sim_setup <- create_data_simulation(
     internal = cut_off_after_first(time = 60),
     external = cut_off_after_events(n = 100)
   )
-my_data_sim_setup
+my_data_sim_setup_with_fixed
 
 # Drift is not be used for the fixed external data!
-generate(my_data_sim_setup, n = 1, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2))
+generate(my_data_sim_setup_with_fixed, n = 1, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2))
 
-my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = c(1, 1.3), drift_hr = c(1))
+external_data_list <- generate(my_data_sim_setup_with_fixed, n = 3, treatment_hr = c(1, 1.3), drift_hr = c(1))
 ```
+
+### Combining simulations
+
+Simulation data objects can be combined so that a simulation can be run once.
+
+```{r}
+combined_data_list <- c(my_data_list, external_data_list)
+combined_data_list
+```
+
