--- a/vignettes/original/_data_simulation.Rmd
+++ b/vignettes/original/_data_simulation.Rmd
@@ -153,10 +153,10 @@ data_list <- generate(data_sim)
 data_list
 ```
 
-We can peek at the data with `get_sim_data()`:
+We can peek at the data with `get_data()`:
 
 ```{r}
-get_sim_data(data_list, index = 1, dataset = 1) %>% head()
+get_data(data_list, index = 1, dataset = 1) %>% head()
 ```
 
 
