--- a/vignettes/data_simulation.Rmd
+++ b/vignettes/data_simulation.Rmd
@@ -238,12 +238,24 @@ data_sim <- create_data_simulation(
 )
 
 data_list <- generate(data_sim)
-head(data_list@data_list[[1]][[1]])
+
+data_list
+#> SimDataList object with  1  different scenarios
+#>   sim_id treatment_hr drift_hr n_datasets_per_param
+#> 1      1          0.5      0.9                    1
+```
+
+We can peek at the data with `get_data()`:
+
+
+```r
+get_data(data_list, index = 1, dataset = 1) %>% head()
 #>   patid      age score_high trt ext  eventtime status enrollment cens
 #> 1     1 53.25887          0   1   0 163.587989      1          1    0
 #> 2     2 55.64217          0   1   0   6.884799      1          1    0
 #>  [ reached getOption("max.print") -- omitted 4 rows ]
 ```
+
 
 We can control how datasets are generated with the `n`, `treatment_hr` and `drift_hr` parameters of `generate()`. These
 will override the defaults specified in `create_data_simulation()`.
