--- a/vignettes/original/_data_simulation.Rmd
+++ b/vignettes/original/_data_simulation.Rmd
@@ -106,10 +106,11 @@ legend(
 Finally, we have the option to transform non-normal covariates, such as with binary cut-offs.
 These can be added to existing objects and can use built-in functions or used defined.
 ```{r}
-with_age_score@transformations <- list(
-  score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7),
-  score_rounded = function(data) round(data$score)
-)
+with_age_score <- with_age_score %>%
+  add_transformation(
+    score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7),
+    score_rounded = function(data) round(data$score)
+  )
 set.seed(123)
 generate(with_age_score)
 ```
