--- a/vignettes/data_simulation.Rmd
+++ b/vignettes/data_simulation.Rmd
@@ -172,10 +172,11 @@ Finally, we have the option to transform non-normal covariates, such as with bin
 These can be added to existing objects and can use built-in functions or used defined.
 
 ```r
-with_age_score@transformations <- list(
-  score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7),
-  score_rounded = function(data) round(data$score)
-)
+with_age_score <- with_age_score %>%
+  add_transformation(
+    score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7),
+    score_rounded = function(data) round(data$score)
+  )
 set.seed(123)
 generate(with_age_score)
 #> Baseline Data List
