add DataSimEnrollment  constructor (#266)
* add DataSimEnrollment  constructor

* rename to `custom_enrollment()`

---------

Co-authored-by: Matt Secrest <secrestm@gene.com>

--- a/vignettes/data_simulation.Rmd
+++ b/vignettes/data_simulation.Rmd
@@ -286,8 +286,7 @@ New methods can be specified by defining a function that takes a parameter `n`, 
 enrollment times for.
 
 ```r
-poisson_enrollment <- new(
-  "DataSimEnrollment",
+poisson_enrollment <- custom_enrollment(
   fun = function(n) rpois(n, lambda = 5),
   label = "Poisson enrollment distribution"
 )
