--- a/vignettes/original/_dataset.Rmd
+++ b/vignettes/original/_dataset.Rmd
@@ -24,7 +24,9 @@ knitr::opts_chunk$set(
 )
 options(rmarkdown.html_vignette.check_title = FALSE)
 output_hook <- knitr::knit_hooks$get("output")
-output_null <- function(x, options) return(NULL)
+output_null <- function(x, options) {
+  return(NULL)
+}
 ```
 
 In this vignette, you'll learn how to conduct Bayesian dynamic borrowing (BDB)
@@ -254,7 +256,7 @@ anls_obj <- create_analysis_obj(
   borrowing = borrowing,
   treatment = treatment,
   quiet = TRUE
-  )
+)
 ```
 
 ```{r echo = FALSE}
@@ -285,7 +287,7 @@ results <- mcmc_sample(anls_obj,
   iter_sampling = 50000,
   chains = 4,
   seed = 112233
-  )
+)
 ```
 
 ```{r echo = FALSE}
