--- a/vignettes/propensity_scores.Rmd
+++ b/vignettes/propensity_scores.Rmd
@@ -75,7 +75,7 @@ summary(weightit_model)
 
 Another useful package is [cobalt](https://cran.r-project.org/package=cobalt), which provides tools for
 assessing balance between groups after weighting or matching. It is compatible with many matching and weighting packages.
-See the [vignette](https://cran.r-project.org/web/packages/cobalt/vignettes/cobalt.html) for more details.
+See the [vignette](https://CRAN.R-project.org/package=cobalt/vignettes/cobalt.html) for more details.
 We can use the `cobalt` package to assess balance with `bal.plot()`.
 
 
@@ -135,7 +135,7 @@ result_att <- mcmc_sample(analysis_att, seed = 123)
 A variety of matching methods, including PS matching are implemented in the
 [MatchIt](https://cran.r-project.org/package=MatchIt) package.
 
-As described in the [Getting Started vignette](https://cran.r-project.org/web/packages/MatchIt/vignettes/MatchIt.html),
+As described in the [Getting Started vignette](https://CRAN.R-project.org/package=MatchIt/vignettes/MatchIt.html),
 it can be useful to check the imbalance before matching.
 
 
@@ -242,7 +242,7 @@ plot(match_11, type = "jitter", interactive = FALSE)
 </div>
 
 Determining whether the balance after matching is appropriate is beyond the scope of this vignette. You can read more in
-the [MatchIt Assessing Balance](https://cran.r-project.org/web/packages/MatchIt/vignettes/assessing-balance.html)
+the [MatchIt Assessing Balance](https://CRAN.R-project.org/package=MatchIt/vignettes/assessing-balance.html)
 vignette. Again the `cobalt` package can be useful here.
 
 However, if you are happy with the results of the matching procedure, you can extract the data for use in `psborrow2`.
