--- a/vignettes/original/_propensity_scores.Rmd
+++ b/vignettes/original/_propensity_scores.Rmd
@@ -28,6 +28,7 @@ output_null <- function(x, options) {
 
 ```{r load, message=FALSE}
 library(psborrow2)
+library(cmdstanr)
 ```
 
 Propensity scores (PS) methods offer various ways to adjust analyses for differences in groups of patients.
@@ -170,6 +171,7 @@ analysis_match <- create_analysis_obj(
 
 result_match <- mcmc_sample(analysis_match, seed = 123)
 ```
+
 ## Combined Weighting and Dynamic Borrowing
 
 The models also support fixed weights on the likelihood contributions from each observation. This
@@ -245,6 +247,7 @@ result_bdb <- mcmc_sample(
   seed = 123
 )
 ```
+
 ```{r, echo = FALSE}
 knitr::knit_hooks$set(output = output_hook)
 ```
