--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -28,3 +28,14 @@
 	url = {http://dx.doi.org/10.1002/sim.5984},
 	langid = {en}
 }
+
+@article{viele2014use,
+  title={Use of historical control data for assessing treatment effects in clinical trials},
+  author={Viele, Kert and Berry, Scott and Neuenschwander, Beat and Amzal, Billy and Chen, Fang and Enas, Nathan and Hobbs, Brian and Ibrahim, Joseph G and Kinnersley, Nelson and Lindborg, Stacy and others},
+  journal={Pharmaceutical statistics},
+  volume={13},
+  number={1},
+  pages={41--54},
+  year={2014},
+  publisher={Wiley Online Library}
+}
