--- a/vignettes/dataset.Rmd
+++ b/vignettes/dataset.Rmd
@@ -312,7 +312,54 @@ be compiled.
 
 ```r
 get_stan_code(anls_obj)
-# Error in get_stan_code(anls_obj): could not find function "get_stan_code"
+# 
+#   functions {
+#   
+# }
+# 
+#   data {
+#   int<lower=0> N;
+#   vector[N] trt;
+#   vector[N] time;
+# vector[N] cens;
+# 
+#   matrix[N,2] Z;
+#   
+# }
+# 
+#   parameters {
+# real beta_trt;
+# 
+# real<lower=0> tau;
+# vector[2] alpha;
+# 
+# }
+# 
+#   transformed parameters {
+#   real HR_trt = exp(beta_trt);
+# }
+# 
+#   model {
+#   vector[N] lp;
+#   vector[N] elp;
+#   beta_trt ~ normal(0, 1000);
+#   lp = Z * alpha + trt * beta_trt;
+# elp = exp(lp) ;
+#   
+#   
+#   tau ~ gamma(0.001, 0.001) ;
+# real sigma;
+# sigma = 1 / tau;
+# alpha[2] ~ normal(0, 1000) ;
+# alpha[1] ~ normal(alpha[2], sqrt(sigma)) ;
+#   for (i in 1:N) {
+#    if (cens[i] == 1) {
+#       target += exponential_lccdf(time[i] | elp[i] );
+#    } else {
+#       target += exponential_lpdf(time[i] | elp[i] );
+#    }
+# }
+# }
 ```
 
 # Sampling from an analysis object
